dom and id and class

--- a/apna_khud_ka_naam.css
+++ b/apna_khud_ka_naam.css
@@ -4,3 +4,16 @@ justify-content: space-between;
 margin-top: 20px;
 background-color: darkgoldenrod;
 }
+
+#my-article {
+    background-color: darkgray;
+    color: black;
+    
+    }
+    
+    .my-section{
+      background-color: chartreuse;
+      color: gray;
+    }
+    
+
