--- a/index.css
+++ b/index.css
@@ -53,8 +53,36 @@ h2 {
     background-color: lightblue;
   }
 
+  aside ul  {
+    list-style: none;
+  }
+
+  aside ul li {
+    padding: 5px 0;
+  }
+
+
+  aside ul li a {
+  text-decoration: none;
+  color: lightgreen;
+  }
+
+
   footer {
     background-color: lightsalmon;
     text-align: center;
     padding: 10px;
   }
+
+
+  @media (max-width: 768px) {
+main, section, header, nav {
+  flex-direction: column;
+  align-items: center;
+}
+
+  }
+
+
+
+    
