--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@ background-color: lightgreen;
 color: darkgreen;
 padding: 1rem;
 display: flex;
+justify-content: center;
 
   }
 
@@ -37,7 +38,7 @@ display: flex;
 
   article {
     background-color: lightgoldenrodyellow;
-    flex: 1;
+    flex: 2;
     padding: 20px;
     margin: 10px;
   }
@@ -46,11 +47,18 @@ h2 {
 }
 
   section {
-    display: flex;
+  
     flex: 1;
-    margin: 0 10px;
+    margin-right: 10px;
     padding: 20px;
     background-color: lightblue;
+  }
+
+  aside {
+    flex: 1;
+    padding: 20px;
+    background-color: lightblue;
+
   }
 
   aside ul  {
@@ -64,7 +72,7 @@ h2 {
 
   aside ul li a {
   text-decoration: none;
-  color: lightgreen;
+  color: darkblue;
   }
 
 
@@ -76,9 +84,18 @@ h2 {
 
 
   @media (max-width: 768px) {
-main, section, header, nav {
+main, section, aside {
   flex-direction: column;
   align-items: center;
+}
+
+main {
+  flex-direction: column;
+}
+
+section , aside {
+  margin: 10px 0;
+  width: 100%;
 }
 
   }
