javascript history, data types, primitive and non primitive

--- a/index.css
+++ b/index.css
@@ -36,7 +36,7 @@ justify-content: center;
     justify-content: space-between;
   }
 
-  article {
+  #anything {
     background-color: lightgoldenrodyellow;
     flex: 2;
     padding: 20px;
